--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
 node_modules/
+
+/src/generated/prisma
+
+/src/generated/prisma
+
+/src/generated/prisma
+
+/src/generated/prisma
+
+/src/generated/prisma
