--- a/package.json
+++ b/package.json
@@ -11,22 +11,32 @@
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["microservice", "worker", "profile", "api"],
+  "keywords": [
+    "microservice",
+    "worker",
+    "profile",
+    "api"
+  ],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "express": "^5.2.1",
-    "jsonwebtoken": "^9.0.2",
-    "joi": "^17.9.2",
+    "@prisma/adapter-pg": "6.13.0",
+    "@prisma/client": "^6.13.0",
     "bcryptjs": "^2.4.3",
-    "express-async-errors": "^3.1.1",
     "cors": "^2.8.5",
-    "helmet": "^7.0.0",
-    "morgan": "^1.10.0",
     "dotenv": "^16.3.1",
-    "redis": "^4.6.8",
-    "geolib": "^3.3.3"
+    "express": "^4.22.1",
+    "express-async-errors": "^3.1.1",
+    "geolib": "^3.3.3",
+    "helmet": "^7.0.0",
+    "joi": "^17.9.2",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
+    "pg": "^8.17.2",
+    "prisma": "^6.19.2",
+    "prisma-client": "^0.0.0",
+    "redis": "^4.6.8"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
