--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,3 @@
 node_modules/
 
-/src/generated/prisma
-
-/src/generated/prisma
-
-/src/generated/prisma
-
-/src/generated/prisma
-
-/src/generated/prisma
+.env
