--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 PORT=3002
-DATABASE_URL="postgresql://postgres:1234567@localhost:5432/worker_profile_and_services_service_db?schema=public"
-REDIS_URL="redis://localhost:6379"
+DATABASE_URL="postgresql://postgres:1234567@localhost:5433/worker_profile_and_services_service_db?schema=public"
+REDIS_EVENT_BUS_URL="redis://localhost:6384"
+REDIS_CACHE_URL="redis://localhost:6379"
 JWT_PUBLIC_KEY_PATH=./keys/jwt-public.pem
 JWT_ISSUER="user-service"
-JWT_AUDIENCE="user-service-clients"
+JWT_AUDIENCE="hms-service-clients"
